--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,15 @@
+ @import "./styles/_variables.scss";
+@import "./styles/items.scss"; 
+@import "./styles/header.scss"; 
+@import "./styles/subheader.scss";
+@import "./styles/loader.scss"; 
+@import "./styles/modal.scss";
+@import "./styles/cart.scss";
+
+
+
 body {
+  background-color:#DEF2F1;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
